# pyscenarios

./: .appveyor.yml  .gitignore  .pre-commit-config.yaml  .prettierignore  .readthedocs.yaml  .travis.yml  HOW_TO_RELEASE  MANIFEST.in  README.md  lefthook.yml  polyfit.ipynb  pull_request_template.md  pyproject.toml  quadax_betainc.ipynb  readthedocs.yml  requirements.txt  setup.cfg  setup.py  simpy.ipynb  smoke_test.py  sobol_jax.ipynb
.github/workflows/: docs.yml  lint.yml  pre-commit.yml  pytest-minimal.yml  pytest-nojit.yml  pytest.yml  wheels.yml
ci/: .coveragerc  requirements-conda-forge.yml  requirements-docs.yml  requirements-flake8.yml  requirements-latest.yml  requirements-lint.yml  requirements-minimal-no-numba.yml  requirements-minimal.yml  requirements-py35.yml  requirements-py36-windows.yml  requirements-py36.yml  requirements-py37.yml  requirements-py38-windows.yml  requirements-py38.yml  requirements.yml
doc/: Makefile  api.rst  conf.py  develop.rst  environment.yml  index.rst  installing.rst  requirements-export.sh  requirements.yml  whats-new.rst
doc/api/: copula.rst  montecarlo.rst  sobol.rst  stats.rst
notebooks/: scramble.ipynb  tail_dependence.ipynb
pyscenarios/: __init__.py  copula.py  duck.py  scramble.py  sobol.py  stats.py  typing.py  visualization.py
pyscenarios/_sobol/: __init__.py  _kernel_numba.py  _kernel_numpy.py  _sobol.py  _vmatrix.py  new-joe-kuo-6.21201.txt.xz
pyscenarios/tests/: __init__.py  test_copula.py  test_duck.py  test_imports.py  test_sobol.py  test_stats.py
