[project]
name = "pyscenarios"
authors = [{ name = "Guido Imperiale", email = "guido.imperiale@gmail.com" }]
license = "Apache-2.0"
description = "Python Monte Carlo Scenario Generator"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Free Threading :: 2 - Beta",
  "Topic :: Scientific/Engineering",
]
requires-python = ">=3.10"
dependencies = [
  "dask[array] >= 2022.4.0",
  "numpy >= 1.22",
  "scipy >= 1.7",
]
dynamic = ["version"]

[project.optional-dependencies]
numba = ["numba >= 0.56"]
all = ["numba >= 0.56"]

[project.urls]
homepage = "https://github.com/crusaderky/pyscenarios"
issues = "https://github.com/crusaderky/pyscenarios/issues"
documentation = "https://pyscenarios.readthedocs.io/"
changelog = "https://pyscenarios.readthedocs.io/en/latest/whats-new.html"

[project.readme]
text = """
- SOBOL generator
- Copulas (Gaussian, Student T, IT)
- Statistical analysis tools for copulas"""
content-type = "text/x-rst"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config -v -r sxfE --color=yes --durations=10"
xfail_strict = true
python_files = ["test_*.py"]
testpaths = ["pyscenarios/tests"]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
filterwarnings = ["error"]

[tool.coverage.report]
show_missing = true

[tool.codespell]
skip = "pixi.lock,build,htmlcov,notebooks"

[tool.ruff]
exclude = [".eggs"]
target-version = "py310"

[tool.ruff.lint]
ignore = [
  "EM101", # Exception must not use a string literal, assign to variable first
  "EM102", # Exception must not use an f-string literal, assign to variable first
  "N802", # Function name should be lowercase
  "N803", # Argument name should be lowercase
  "N806", # Variable should be lowercase
  "N816", # Variable in global scope should not be mixedCase
  "PT006", # Wrong type passed to first argument of `pytest.mark.parametrize`; expected `tuple`
  "PLC0414", # Import alias does not rename original package
  "PLR0912", # Too many branches
  "PLR0913", # Too many arguments in function definition
  "PLR0915", # Too many statements
  "PLR2004", # Magic value used in comparison, consider replacing `123` with a constant variable
  "PLW0603", # Using the global statement
  "PLW2901", # for loop variable overwritten by assignment target
  "SIM108", # Use ternary operator instead of if-else block
]
select = [
  "YTT", # flake8-2020
  "B", # flake8-bugbear
  "C4", # flake8-comprehensions
  "EM", # flake8-errmsg
  "EXE", # flake8-executable
  "ICN", # flake8-import-conventions
  "G", # flake8-logging-format
  "PIE", # flake8-pie
  "PT", # flake8-pytest-style
  "RET", # flake8-return
  "SIM", # flake8-simplify
  "ARG", # flake8-unused-arguments
  "I", # isort
  "NPY", # NumPy specific rules
  "N", # pep8-naming
  "E", # Pycodestyle
  "W", # Pycodestyle
  "PGH", # pygrep-hooks
  "F", # Pyflakes
  "PL", # pylint
  "UP", # pyupgrade
  "RUF", # unused-noqa
  "TID", # tidy-ups
  "EXE001", #  Shebang is present but file is not executable
]

[tool.ruff.lint.isort]
known-first-party = ["pyscenarios"]

[tool.mypy]
files = ["pyscenarios"]
python_version = "3.10"
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
enable_error_code = ["ignore-without-code", "possibly-undefined", "truthy-bool"]

[[tool.mypy.overrides]]
module = ["*.tests.*"]
disallow_untyped_defs = false

[tool.pixi.workspace]
# TODO remove rc channel after Python 3.14 final release
channels = ["https://prefix.dev/conda-forge"]
platforms = ["linux-64", "linux-aarch64", "osx-64", "osx-arm64", "win-64"]

[tool.pixi.dependencies]
python = "*"
numpy = "*"
scipy = "*"
dask-core = "*" # No dask.distributed

[tool.pixi.feature.lint.dependencies]
lefthook = "*"
ruff = "*"
mypy = "*"
dprint = "*"
actionlint = "*"
codespell = "*"
blacken-docs = "*"
validate-pyproject = "*"
sphinx-lint = "*"
# mypy check dependencies
numpy = "*"
scipy = "*"
dask-core = "*" # No dask.distributed

[tool.pixi.feature.lint.tasks]
install-git-hooks = { cmd = "lefthook install", description = "Install pre-commit hooks" }
lint = { cmd = "lefthook run pre-commit --all-files --force", description = "Run all linters" }

[tool.pixi.feature.smoke.tasks]
smoke-test = { cmd = "python smoke_test.py", description = "Test import the library and print essential information" }

[tool.pixi.feature.tests.dependencies]
pytest = "*"
pytest-cov = "*"

[tool.pixi.feature.tests.tasks]
tests = { cmd = "pytest", description = "Run tests" }
tests-cov = { cmd = "pytest --cov --cov-report=xml --cov-report=term", description = "Run tests with coverage" }
coverage = { cmd = "coverage html", depends-on = ["tests-cov"], description = "Generate test coverage html report" }
open-coverage = { cmd = "open htmlcov/index.html", depends-on = ["coverage"], description = "Open test coverage report" }

[tool.pixi.feature.docs.dependencies]
pip = "*"
sphinx = "*"
sphinx_rtd_theme = "*"

[tool.pixi.feature.docs.tasks]
docs = { cmd = "sphinx-build -n -j auto -b html -d ../build/doctrees . ../build/html", env = { PYTHONPATH = "$PIXI_PROJECT_ROOT" }, cwd = "doc", description = "Build docs" }
open-docs = { cmd = "open build/html/index.html", depends-on = ["docs"], description = "Open the generated docs" }
doc-requirements = { cmd = "echo '# File generated by `pixi run doc-requirements`' > doc/requirements.yml && pixi workspace export conda-environment -e docs >> doc/requirements.yml", description = "Export doc requirements for readthedocs CI" }

[tool.pixi.feature.jupyter.dependencies]
jupyterlab = "*"
matplotlib = "*"
pandas = "*"

[tool.pixi.feature.jupyter.tasks]
ipython = { cmd = "ipython", description = "Launch IPython" }
jupyter = { cmd = "jupyter lab", description = "Launch Jupyter Lab" }

[tool.pixi.feature.py310.dependencies]
python = "=3.10"

[tool.pixi.feature.py313.dependencies]
python = "=3.13" # Needed for Numba

[tool.pixi.feature.py314.dependencies]
python = "=3.14"

[tool.pixi.feature.nogil.dependencies]
python-freethreading = "=3.14"
pytest-run-parallel = "*"

[tool.pixi.feature.mindeps.dependencies]
python = "=3.10"
numpy = "=1.22"
scipy = "=1.7"
dask-core = "=2022.4.0" # No dask.distributed

[tool.pixi.feature.numba.dependencies]
numba = "*"

[tool.pixi.feature.mindeps-numba.dependencies]
numba = "=0.56"

[tool.pixi.feature.upstream.dependencies]
python = "=3.14"

[tool.pixi.feature.upstream.pypi-dependencies]
numpy = { index = "https://pypi.anaconda.org/scientific-python-nightly-wheels/simple" }
scipy = { index = "https://pypi.anaconda.org/scientific-python-nightly-wheels/simple" }
dask = { git = "https://github.com/dask/dask.git" }

[tool.pixi.feature.dist.dependencies]
python-build = "*"
twine = "*"

[tool.pixi.feature.dist.tasks]
dist-clear = { cmd = "rm -rf build dist" }
build = { cmd = "python -m build", description = "Build pypi artifacts" }
dist = { depends-on = ["dist-clear", "build", "twine-check"] }
twine-check = { cmd = "python -m twine check dist/*" }
twine-upload = { cmd = "python -m twine upload dist/*" }

[tool.pixi.environments]
default = { features = ["py313", "numba", "docs", "smoke", "tests", "jupyter"], solve-group = "py313-numba" }
dist = { features = ["dist"], no-default-feature = true }
lint = { features = ["lint"], no-default-feature = true }
docs = { features = ["py314", "docs", "jupyter"], solve-group = "py314" }
mindeps = { features = ["mindeps", "smoke", "tests"], solve-group = "mindeps" }
mindeps-numba = { features = ["mindeps", "mindeps-numba", "smoke", "tests"], solve-group = "mindeps" }
py310 = { features = ["py310", "smoke", "tests"] }
py310-numba = { features = ["py310", "numba", "smoke", "tests"] }
py314 = { features = ["py314", "smoke", "tests"], solve-group = "py314" }
# TODO no numba binaries for 3.13t, 3.14, or 3.14t yet
py313-numba = { features = ["py313", "numba", "smoke", "tests"] }
nogil = { features = ["nogil", "smoke", "tests"] }
upstream = { features = ["upstream", "smoke", "tests"], no-default-feature = true }
smoke = { features = ["smoke"] }
