[metadata]
name = pyscenarios
author = Guido Imperiale
author_email = guido.imperiale@gmail.com
license = Apache
description = Python Monte Carlo Scenario Generator
long_description_content_type=x-rst
long_description =
  - SOBOL generator
  - Copulas (Gaussian, Student T, IT)
  - Statistical analysis tools for copulas

url = https://github.com/crusaderky/pyscenarios
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering

[options]
packages = pyscenarios
zip_safe = False  # https://mypy.readthedocs.io/en/latest/installed_packages.html
include_package_data = True
python_requires = >=3.6
install_requires =
    setuptools  # For pkg_resources
    dask >= 2.2
    numba >= 0.44
    numpy >= 1.15
    pandas >= 0.25
    scipy >= 1.3
setup_requires =
    setuptools
    setuptools_scm
    # Need to run the full module to precalculate the SOBOL V matrix
    dask >= 2.2
    numba >= 0.44
    numpy >= 1.15
    pandas >= 0.25
    scipy >= 1.3

[options.package_data]
pyscenarios =
    resources/*.npy

[bdist_wheel]
universal = 1

[wheel]
universal = 1

[tool:pytest]
# Adding --cov to setup.cfg breaks PyCharm debugger; see
# https://stackoverflow.com/questions/40718760/unable-to-debug-in-pycharm-with-pytest
# --cov is added directly in the CI scripts
addopts = --strict
junit_family = xunit2
python_files = test_*.py
testpaths = pyscenarios/tests
markers =
    slow: marks tests as slow (deselect with '-m "not slow"')

[flake8]
# https://github.com/python/black#line-length
max-line-length = 88
# E203: PEP8-compliant slice operators
#       https://github.com/python/black#slices
# W503: Allow for breaks before binary operator (Knuth's convention) - see
#       https://www.python.org/dev/peps/pep-0008/#should-a-line-break-before-or-after-a-binary-operator
ignore = E203, W503
exclude=
  .eggs
  doc/

[isort]
default_section = THIRDPARTY
known_first_party = pyscenarios
force_grid_wrap = 0
include_trailing_comma = True
line_length = 88
multi_line_output = 3
use_parentheses = True


# mypy: Ignore non-typed libraries
[mypy-dask]
ignore_missing_imports = True
[mypy-dask.array]
ignore_missing_imports = True
[mypy-dask.array.core]
ignore_missing_imports = True
[mypy-numba]
ignore_missing_imports = True
[mypy-numpy]
ignore_missing_imports = True
[mypy-numpy.linalg]
ignore_missing_imports = True
[mypy-numpy.random]
ignore_missing_imports = True
[mypy-numpy.testing]
ignore_missing_imports = True
[mypy-pytest]
ignore_missing_imports = True
[mypy-scipy]
ignore_missing_imports = True
[mypy-scipy.stats]
ignore_missing_imports = True
[mypy-setuptools]
ignore_missing_imports = True
