[metadata]
name = pyscenarios
author = Guido Imperiale
author_email = guido.imperiale@gmail.com
license = Apache
description = Python Monte Carlo Scenario Generator
description_content_type=text/plain
long_description =
  - SOBOL generator
  - Copulas (Gaussian, Student T, IT)
  - Statistical analysis tools for copulas
long_description_content_type=text/x-rst

url = https://github.com/crusaderky/pyscenarios
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering

[options]
packages = pyscenarios
zip_safe = False  # https://mypy.readthedocs.io/en/latest/installed_packages.html
include_package_data = True
python_requires = >=3.8
install_requires =
    dask >= 2.2
    numba >= 0.44
    numpy >= 1.15
    scipy >= 1.3

setup_requires =
    setuptools_scm

[options.package_data]
pyscenarios =
    py.typed
    *.txt.xz

[bdist_wheel]
universal = 1

[wheel]
universal = 1

[tool:pytest]
# Adding --cov to setup.cfg breaks PyCharm debugger; see
# https://stackoverflow.com/questions/40718760/unable-to-debug-in-pycharm-with-pytest
# --cov is added directly in the CI scripts
addopts = --strict
junit_family = xunit2
python_files = test_*.py
testpaths = pyscenarios/tests
markers =
    slow: marks tests as slow (deselect with '-m "not slow"')

[flake8]
# https://github.com/python/black#line-length
max-line-length = 88
# E203: PEP8-compliant slice operators
#       https://github.com/python/black#slices
# W503: Allow for breaks before binary operator (Knuth's convention) - see
#       https://www.python.org/dev/peps/pep-0008/#should-a-line-break-before-or-after-a-binary-operator
ignore = E203, W503
exclude=
  .eggs
  doc/

[isort]
default_section = THIRDPARTY
known_first_party = pyscenarios
force_grid_wrap = 0
include_trailing_comma = True
line_length = 88
multi_line_output = 3
use_parentheses = True

[mypy-*]
ignore_missing_imports = True
